# g2s3

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.pptx
.cargo/: config.toml
.github/workflows/: build-and-package-rust-binary.yaml
cdk/: .gitignore  package-lock.json  package.json
cdk/lib/: google-backup-to-s3-stack.ts
cdk/test/: cdk.test.ts
rust/: .rustfmt.toml  Cargo.toml  Dockerfile
rust/.cargo/: config.toml
rust/src/: cli_factories.rs  drive.rs  errors.rs  lib.rs
scripts/: build-and-push-container.sh  build-and-run-container.sh  build-container.sh  build-release.sh  cdk-deploy.sh  cdk-synth.sh  push-container.sh  run-container.sh
src/: errors.rs  lib.rs
