[package]
name = "google_backup_to_s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.*"
serde_json = "1.*"
serde = "1.*"
reqwest = "0.11.*"
futures = "0.3.*"
tokio = { version = "1", features = ["full"] }
google-drive3 = "4.*"
aws-sdk-s3 = "0.*"
aws-config = "0.*"
aws-types = "0.*"
aws-smithy-http = "0.*"
lambda_runtime = "0.*"
yup-oauth2 = "7.*"
log = "0.*"
env_logger = "0.*"
chrono = "0.*"
md5 = "0.*"
#metrics = "0.*"
#metrics_cloudwatch = { version = "0.*", features = ["rustls"], default-features = false }
hex = "0.*"
base64 = "0.*"
tokio-util = { version = "0.*", features = ["compat"] }
error-chain = "0.*"
clap = { version = "4.*", features = ["derive"] }
