[package]
name = "google_backup_to_s3"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4"
serde_json = "1"
serde = "1"
reqwest = "0.11"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
google-drive3 = "4"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"
yup-oauth2 = "7"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
md5 = "0.7"
hex = "0.4"
base64 = "0.21"
tokio-util = { version = "0.7", features = ["compat"] }
error-chain = "0.12"
clap = { version = "4", features = ["derive"] }
url = "2"
byte-unit = "4"
async-trait = "0.1"
